--- a/style/style.css
+++ b/style/style.css
@@ -1,67 +1,171 @@
-div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-}
+.main {
+    width: 100%;
+  }
 
-#home {
-    height:100%;
-    justify-content: none;
-
-}
-
-#work {
-    margin-top: 20%;
-    margin-bottom: 20%;
-    margin:auto;
-    justify-content: center;
-}
- 
-#contact {
-    margin-top: 20%;
-    margin-bottom: 20%;
-}
-.form-box {
-    flex-direction: column;
-    padding: 20px;
-}
-#navbar {
-    top: 0;
-    height: 5%;
-    background-color: aqua;
-    justify-content: center;
-}
-
-.content {
-    flex-direction: row;
-    width:100%;
-}
-
-.picture-container {
-    width: 25%;
-    justify-content: left; 
-}
-
-.card {
-    flex-direction: row;
-    justify-content: center;
-    text-align: left;
-    margin:0;
-}
-
-.card-content h2 {
+* {
     margin: 0;
-}
-
-.profile-pic {
-    object-fit: contain;
+    padding: 0;
 }
 
 .sticky {
     position: fixed;
     width: 100%;
 }
-h1 {
-    text-align: center;
+
+.project-container {
+    margin-top: 70px;
 }
+
+
+
+/* Taken from https://www.w3schools.com/howto/howto_css_team.asp */
+.column {
+    margin-bottom: 16px;
+    margin-left: auto;
+    margin-right: auto;
+    flex-direction: column;
+    padding: 0 8px;
+    text-align: left;
+  }
+  
+
+  @media only screen and (max-width: 900px) {
+    body .card {
+        flex-direction: column;
+        width: 60%;
+        justify-content: center;
+    }
+
+    body .card img {
+        width: 100%;
+    }
+
+    body .info {
+        display: block;
+    }
+
+    .date {
+        width: 20%;
+    }
+
+    .blurb {
+        text-align: left;
+    }
+  }
+
+  .column h1 {
+    margin-bottom: 2rem;
+    width: 100%;
+    justify-content: center;
+  }
+
+  #project-header {
+    width: 60%;
+    margin:auto;
+  }
+
+  /* Add some shadows to create a card effect */
+  .card {
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+    margin: auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 5%;
+  }
+
+  .card img {
+    width: 300px;
+    border-radius: 5%;
+
+  }
+  
+  /* Some left and right padding inside the container */
+  .container {
+    padding: 0 16px;
+  }
+  
+  /* Clear floats */
+  .container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  .title {
+    color: grey;
+  }
+  
+  .info {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+  }
+
+  .date {
+    color:darkgrey;
+    background-color: #000;
+    border-radius: 900px;
+    flex-basis: 30%;
+  }
+
+  .blurb {
+    flex-basis: 70%;
+    align-self: left;
+    color: #04AA6D;
+  }
+
+  .button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    margin: 10px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    margin:auto;
+    margin-bottom: 10px;
+    cursor: pointer;
+    width: 100%;
+  }
+  
+  .button:hover {
+    background-color: #555;
+  }
+
+  /* Add a black background color to the top navigation */
+.topnav {
+    top: 0;
+    background-color: #333;
+    flex-direction: row;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add an active class to highlight the current page */
+  .topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+  
+  /* Hide the link that should open and close the topnav on small screens */
+  .topnav .icon {
+    display: none;
+  }
