--- a/style/home.css
+++ b/style/home.css
@@ -1,6 +1,128 @@
+body {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.main {
+  width: 100%;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+@media only screen and (max-width: 580px) {
+    body #home {
+        background-color: rgb(72, 49, 212);
+        background-image: none;
+    }
+    body .home-container {
+        flex-direction: column;
+        justify-content: center;
+        margin:auto;
+        background-color: rgb(72, 49, 212) ;
+    }
+
+    body .hero-content {
+        width: 80%;
+    }
+
+    .hero-content h1 {
+        font-size: 2.5em;
+    }
+    .avatar-container {
+        display: none;
+    }
+
+    body .mobile-avatar-container {
+        background-color: rgb(204, 243, 129);
+        display: flex;
+        justify-content: center;
+        width:100%
+    }
+
+
+
+}
+
+
+
+#home {
+  background-color: #b38383;
+  text-align: center;
+  background-image: linear-gradient(90deg, rgb(72, 49, 212) 70%, rgb(204, 243, 129) 30%);
+  position: relative;
+  padding: 1em 0 10em 0;
+}
+
 .home-container {
-    display: flex;
-    width: 50%;
-    justify-content: center;
-    margin:auto;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+
+.mobile-avatar-container {
+    display: none;
+    width: 100%;
+}
+
+.avatar-container {
+    margin:3em;
+    width:25em;
+}
+
+#avatar {
+  width: 100%; /* Ensure the image fills the container */
+  height: auto; /* Maintain aspect ratio */
+  object-fit: cover; /* Prevents the image from stretching */
+}
+
+#mobile-avatar {
+    margin: 2em;
+    width: 14em;
+}
+.hero-content {
+    margin: 3em;
+    width: 30em;
+  text-align: left;
+  padding: 30px;
+
+}
+
+h1 {
+    top:0;
+    cursor:default;
+    color: rgb(255, 255, 255);
+  font-size: 4em;
+  font-family: "Segoe UI";
+  margin-bottom: 0.5em;
+    padding: 0 30 0 30;
+}
+
+h2 {
+    cursor:default;
+
+  font-size: 1.25em;
+  font-weight: 700;
+  margin-bottom: 20px;
+  color: rgb(255, 255, 255);
+}
+
+.resume-link button {
+  padding: 20px 20px;
+  margin-top: 20px;
+  background-color: #258efe;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1em;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.resume-link button:hover {
+  background-color: #0056b3;
 }
