--- a/style/style.css
+++ b/style/style.css
@@ -1,38 +1,125 @@
 .main {
     width: 100%;
-  }
+}
 
 * {
     margin: 0;
     padding: 0;
 }
 
+body {
+  font-family: sans-serif;
+}
+
+@keyframes slide {
+  0% {
+   margin-top: -100px;
+   opacity: 0;
+  }
+  100% {
+   margin-top: 0px;
+   opacity: 1;
+  }
+ }
+
+.animate {
+  animation: slide 1s ease-in-out;
+  animation-fill-mode: forwards;
+}
+
 .sticky {
     position: fixed;
+    top:0;
     width: 100%;
 }
 
-.project-container {
-    margin-top: 70px;
+.menu-container {
+  z-index: 1;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+}
+
+h1 {
+  margin: 0;
+}
+
+.menu-toggle {
+  flex-direction: column;
+  padding:10px;
+  transition: 0.45s;
+  cursor: pointer;
+}
+
+.menu-toggle:hover {
+  background-color: #00349b;
+}
+
+.bar {
+  width: 25px;
+  height: 4px;
+  background-color: #ffffff;
+  margin: 3px 0;
 }
 
 
 
+.nav-menu {
+  opacity: 0;
+  margin-top: -200px;
+  background-color: #00349b;
+}
+.nav-menu ul {
+  list-style: none;
+  padding: 9px;
+  display: flex;
+}
+
+.nav-menu ul li {
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-left: 20px;
+  border-radius: 5px;
+  padding:3px;
+}
+
+.nav-menu ul li:first-child {
+  margin-left: 0;
+}
+
+.nav-menu ul li a {
+  text-decoration: none;
+  color: #ffffff;
+  transition: color 0.4s;
+}
+
+.nav-menu ul li a:hover {
+  color: rgb(204, 243, 129);
+  transition: 0.4s;
+}
+
+
+.project-container {
+    padding-top: 70px;
+    background-image: linear-gradient(160deg, rgb(72, 49, 212) 70%, rgb(204, 243, 129) 40%);
+}
+
 /* Taken from https://www.w3schools.com/howto/howto_css_team.asp */
 .column {
+  width: 70%;
     margin-bottom: 16px;
     margin-left: auto;
     margin-right: auto;
     flex-direction: column;
     padding: 0 8px;
-    text-align: left;
   }
-  
 
-  @media only screen and (max-width: 900px) {
+  @media only screen and (max-width: 800px) {
     body .card {
         flex-direction: column;
-        width: 60%;
         justify-content: center;
     }
 
@@ -51,38 +138,64 @@
     .blurb {
         text-align: left;
     }
+
+    body .description {
+      font-size: 1.5em;
+    }
   }
 
   .column h1 {
     margin-bottom: 2rem;
-    width: 100%;
     justify-content: center;
   }
 
   #project-header {
-    width: 60%;
-    margin:auto;
+    width: 100%;
+    text-align: left;
   }
 
+  #project-header h1{
+    font-family: "Segoe UI";
+    color: rgb(204, 243, 129);
+    font-size: 4em;
+
+  }
+
+  @keyframes boxshadow {
+    0% {
+      box-shadow:20px 20px 0px 1px #bd6dff, 40px 40px 0px 1px #ff6d6d, 60px 60px 0px 1px #00ff44;
+    } 25% {
+      box-shadow:20px 0px 0px 1px rgb(189, 109, 255), 40px 40px 0px 1px #ff6d6d, 60px 60px 0px 1px #00ff44;
+    } 50% {
+      box-shadow:20px 0px 0px 1px rgb(189, 109, 255), 40px 20px 0px 1px #ff6d6d, 60px 60px 0px 1px #00ff44;
+    } 75% {
+      box-shadow:20px 0px 0px 1px rgb(189, 109, 255), 40px 20px 0px 1px #ff6d6d, 60px 40px 0px 1px #00ff44;
+    }100% {
+      box-shadow:20px 20px 0px 1px rgb(189, 109, 255), 40px 40px 0px 1px #ff6d6d, 60px 60px 0px 1px #00ff44;
+    }
+  }
   /* Add some shadows to create a card effect */
   .card {
+    padding:1em;
     display: flex;
     flex-direction: row;
-    width: 50%;
-    margin: auto;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 5%;
+    margin: 0 0 5rem 0;
+    background-color: #ffffff;
+    border-radius: 20px;
+    animation: boxshadow 10s ease alternate 10000;
+    box-shadow:20px 20px 0px 1px rgb(189, 109, 255), 30px 30px 0px 1px rgb(146, 255, 132);
   }
 
   .card img {
     width: 300px;
     border-radius: 5%;
-
   }
   
   /* Some left and right padding inside the container */
   .container {
-    padding: 0 16px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 16px;
   }
   
   /* Clear floats */
@@ -92,80 +205,57 @@
     display: table;
   }
   
+
+
   .title {
     color: grey;
   }
   
-  .info {
-    display: flex;
-    flex-direction: row;
-    text-align: center;
+  .project-title {
+    text-decoration: none; 
+    color: #000;
+    font-size: 2rem;
+    transition: 0.4s;
+    }
+  
+  .project-title:hover {
+    color: #b2c8aa;
   }
 
-  .date {
+
+  .info {
     color:darkgrey;
-    background-color: #000;
     border-radius: 900px;
-    flex-basis: 30%;
+    cursor: default;
   }
 
   .blurb {
-    flex-basis: 70%;
-    align-self: left;
-    color: #04AA6D;
+    font-size: 17px;
+    font-weight:500;
+    color:#69696a
+  }
+
+  .description {
+    font-size: 25px;
+    margin: 10px 0;
+    cursor: default;
   }
 
   .button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    margin: 10px;
-    color: white;
-    background-color: #000;
+    padding: 10px 20px;
+    border-radius: 0 15px;
+    text-transform: uppercase;
+    font-weight: 100;
+    color: rgb(255, 255, 255);
+    background-color: #000000;
     text-align: center;
-    margin:auto;
-    margin-bottom: 10px;
     cursor: pointer;
-    width: 100%;
+    width: fit-content;
+    margin: 15px 0;
+    transition: 0.4s;
   }
   
   .button:hover {
     background-color: #555;
   }
 
-  /* Add a black background color to the top navigation */
-.topnav {
-    top: 0;
-    background-color: #333;
-    flex-direction: row;
-    overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Add an active class to highlight the current page */
-  .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
-  }
-  
-  /* Hide the link that should open and close the topnav on small screens */
-  .topnav .icon {
-    display: none;
-  }
