--- a/style/home.css
+++ b/style/home.css
@@ -13,15 +13,18 @@ body {
   padding: 0;
 }
 
-@media only screen and (max-width: 580px) {
+@media only screen and (max-width: 850px) {
     body #home {
         background-color: rgb(72, 49, 212);
         background-image: none;
+        padding-top: 5em;
     }
     body .home-container {
         flex-direction: column;
         justify-content: center;
         margin:auto;
+        margin-bottom: 0em;
+
         background-color: rgb(72, 49, 212) ;
     }
 
@@ -43,8 +46,45 @@ body {
         width:100%
     }
 
+    .about-me-image img{
+      /* display: none; */
+      width: 50%;
+    }
 
+    .about-me-image {
+      display: none;
+    }
+    
+    body .about-container {
+      width: 100%;
+      padding:0;
+    }
 
+    body .about-me-text {
+      justify-self: center;
+      margin:auto;
+      
+    }
+
+    .custom-shape-divider-bottom-1707896441{
+      display: none;
+    }
+
+    body .about-me {
+      background-image: none;
+      background-color: #4831d4;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+  body .about-me-image {
+    width: 30rem;
+    margin-left: 3rem;
+  }
+
+  body .about-me-text {
+    margin-right: auto;
+  }
 }
 
 
@@ -52,14 +92,15 @@ body {
 #home {
   background-color: #b38383;
   text-align: center;
-  background-image: linear-gradient(90deg, rgb(72, 49, 212) 70%, rgb(204, 243, 129) 30%);
+  background-image: linear-gradient(90deg, #4831d4 76%, #ccf381 30%);
   position: relative;
-  padding: 1em 0 10em 0;
+  padding: 15em 0 0;
 }
 
 .home-container {
   display: flex;
   justify-content: space-evenly;
+  margin-bottom: 5em;
 }
 
 
@@ -71,21 +112,25 @@ body {
 .avatar-container {
     margin:3em;
     width:25em;
+    height:25em;
 }
 
 #avatar {
   width: 100%; /* Ensure the image fills the container */
   height: auto; /* Maintain aspect ratio */
   object-fit: cover; /* Prevents the image from stretching */
+  box-shadow:20px 20px 0px 1px #3928a7;
 }
 
 #mobile-avatar {
-    margin: 2em;
-    width: 14em;
+    margin: 4em;
+    width: 20em;
 }
 .hero-content {
+  display:flex;
     margin: 3em;
-    width: 30em;
+    width: 25%;
+    flex-direction: column;
   text-align: left;
   padding: 30px;
 
@@ -110,19 +155,142 @@ h2 {
   color: rgb(255, 255, 255);
 }
 
+.icon {
+  display: inline-block;
+  width: 60px;
+  height: auto;
+  margin:0.5em 0 1em;
+  border-radius: 10px;
+  text-align: center;
+  line-height: 40px;
+  color: #ccf381; /* White color for the icon */
+  font-size: 50px;
+  text-decoration: none; /* Remove default underline */
+  transition: .45s
+}
+
+.icon:hover {
+  color: #8da85c; /* Darker shade of LinkedIn blue on hover */
+}
+
+/* Assuming you're using Font Awesome for icons */
+.fa-linkedin {
+  font-family: 'Font Awesome 5 Free';
+}
 .resume-link button {
   padding: 20px 20px;
   margin-top: 20px;
-  background-color: #258efe;
-  color: #fff;
+  background-color: #ccf381;
+  color: #5f53ac;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 1em;
-  font-weight: 600;
-  text-transform: uppercase;
+  font-size: 1.5em;
+  font-weight: 700;
+  transition: 0.45s;
 }
 
 .resume-link button:hover {
-  background-color: #0056b3;
+  background-color: #8da85c;
+  color:#fff
+}
+.custom-shape-divider-top-1707896522 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.custom-shape-divider-top-1707896522 svg {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 174px;
+  transform: rotateY(180deg);
+  margin-bottom: -10px;
+}
+
+.custom-shape-divider-top-1707896522 .shape-fill {
+  fill: #ccf381;
+}
+
+.custom-shape-divider-bottom-1707896441 svg {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 124px;
+  transform: rotateY(180deg);
+}
+
+.custom-shape-divider-bottom-1707896441 .shape-fill {
+  fill: #ccf381;
+}
+
+#about-section {
+  position: relative;
+}
+.about-me {
+  background-image: linear-gradient(90deg, #ccf381 5%, #4831d4 5%);
+  display: flex;
+  flex-direction: column;
+}
+.about-container {
+  width: 70%;
+  margin: 20px auto;
+  padding: 20px;
+  display:flex;
+  background-color: #3928a7;
+  border-radius: 500px 0;
+  justify-content: space-evenly;
+}
+
+#reversed {
+  border-radius: 0 500px;
+}
+
+#about-me-header {
+  padding: 1em;
+  border: solid;
+  border-color: #3928a7;
+  border-width: 5px;
+  box-shadow:20px 20px 0px 1px #3928a7;
+  margin:2em auto 10px;
+  color: #ccf381;
+}
+
+.about-me-content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.emphasized {
+  color:#96c049;
+  font-weight: 700;
+}
+
+.about-me-text {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  color: #e8ece6;
+  font-size: 25pt;
+  margin: 5em;
+  cursor:default;
+}
+
+.about-me-image {
+  width: 40em;
+}
+
+.about-me-image img {
+  width: 100%; /* Ensure the image fills the container */
+  height: auto; /* Maintain aspect ratio */
+  object-fit: cover; /* Prevents the image from stretching */
+  border-radius: 8px;
 }
