--- a/style/style.css
+++ b/style/style.css
@@ -35,11 +35,14 @@ body {
 
 .menu-container {
   z-index: 1;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
+  width:fit-content;
+  top:0;
+  left: 0;
+  margin: auto;
+  padding: 0;
   display: flex;
   align-items: center;
+
 }
 
 h1 {
@@ -51,6 +54,7 @@ h1 {
   padding:10px;
   transition: 0.45s;
   cursor: pointer;
+  background-color: #4831d4;
 }
 
 .menu-toggle:hover {
@@ -69,7 +73,7 @@ h1 {
 .nav-menu {
   opacity: 0;
   margin-top: -200px;
-  background-color: #00349b;
+  background-color: #4831d4;
 }
 .nav-menu ul {
   list-style: none;
@@ -78,12 +82,12 @@ h1 {
 }
 
 .nav-menu ul li {
-  font-size: 18px;
+  font-size: 25px;
+  font-family:Arial, Helvetica, sans-serif;
   font-weight: 700;
-  text-transform: uppercase;
   margin-left: 20px;
   border-radius: 5px;
-  padding:3px;
+  padding:0px;
 }
 
 .nav-menu ul li:first-child {
@@ -104,7 +108,7 @@ h1 {
 
 .project-container {
     padding-top: 70px;
-    background-image: linear-gradient(160deg, rgb(72, 49, 212) 70%, rgb(204, 243, 129) 40%);
+    background-image: linear-gradient(160deg, #4831d4 70%, rgb(204, 243, 129) 40%);
 }
 
 /* Taken from https://www.w3schools.com/howto/howto_css_team.asp */
@@ -244,10 +248,10 @@ h1 {
   .button {
     padding: 10px 20px;
     border-radius: 0 15px;
-    text-transform: uppercase;
-    font-weight: 100;
+    font-size: 20px;
     color: rgb(255, 255, 255);
     background-color: #000000;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
     cursor: pointer;
     width: fit-content;
