--- a/style/contact.css
+++ b/style/contact.css
@@ -62,3 +62,16 @@ body {
   button:hover {
     background-color: #0056b3;
   }
+
+  #confirmation {
+    width: 100%;
+    justify-content: center;
+    padding: 30px 0;
+    border-radius: 10px;
+    text-align: center;
+    background-color: greenyellow;
+  }
+
+  #confirmation p {
+    font-size: 20px;
+  }
