--- a/style/contact.css
+++ b/style/contact.css
@@ -72,6 +72,10 @@ body {
     background-color: greenyellow;
   }
 
+  input, textarea {
+    font-size: 20px;
+  }
+
   #confirmation p {
     font-size: 20px;
   }
